--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "serve": "lite-server -c=bs-config.json",
     "serve:e2e": "lite-server -c=bs-config.e2e.json",
     "prestart": "npm run build",
-    "start": "concurrently \"npm run build:watch\" \"npm run serve\"",
+    "start": "concurrently \"npm run build:watch\" \"npm run serve\" --proxy-config proxy.config.json",
     "pree2e": "npm run build:e2e",
     "e2e": "concurrently \"npm run serve:e2e\" \"npm run protractor\" --kill-others --success first",
     "preprotractor": "webdriver-manager update",
@@ -40,22 +40,24 @@
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "concurrently": "^3.2.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.3.2",
+    "@types/jasmine": "2.5.47",
+    "@types/node": "^7.0.18",
     "canonical-path": "0.0.2",
-    "tslint": "^5.2.0",
-    "lodash": "^4.16.4",
+    "concurrently": "^3.2.0",
     "jasmine-core": "~2.6.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "lite-server": "^2.2.2",
+    "lodash": "^4.16.4",
     "protractor": "~5.1.2",
     "rimraf": "^2.5.4",
-    "@types/node": "^7.0.18",
-    "@types/jasmine": "2.5.47"
+    "tslint": "^5.2.0",
+    "typescript": "~2.3.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   },
   "repository": {}
 }
